-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
af8e318b35498543107e7251324ccdc0c4152483
tst_QWidget::saveRestoreGeometry fails (at least) on Windows.
Restoring the position after fullscreen is broken.
Same for restoreVersion1Geometry.
- relates to
-
QTBUG-46116 tst_qwidget fails in the CI
-
- Closed
-
For Gerrit Dashboard: QTBUG-26421 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
197407,3 | Blacklist tst_QWidget::restoreVersion1Geometry for XCB | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |